# jk

./: Cargo.toml
.github/workflows/: ci.yml
benches/: formatter_comparison.rs
crates/jsax/: Cargo.toml  LICENSE  README.md
crates/jsax/src/: lexer.rs  lib.rs
crates/jsax/tests/: json_test_suite.rs
crates/jsax/tests/test_parsing/: LICENSE
samples/: array.json  data.json  nested-array.json  nested-object.json
src/: borrowed_value.rs  cli.rs  flatten.rs  fmt.rs  fold_tree.rs  lib.rs  main.rs  node.rs  schema.rs  source.rs  unflatten.rs  utils.rs  viewer.rs
src/schema/: generator.rs  infer.rs
src/schema/generator/: rust.rs  typescript.rs
src/unflatten/: lexer.rs  parser.rs  types.rs
tests/: roundtrip.rs
