[workspace]
members = ["crates/jsax"]

[package]
name = "jk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = { version = "0.28.1", features = ["use-dev-tty"] }
indexmap = "2.12.0"
lexopt = "0.3.1"
rapidhash = "4.1.0"
ratatui = "0.29.0"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "2.0.17"
jsax = { path = "crates/jsax" }
memmap2 = "0.9.9"
logos = "0.15.1"
