[workspace]
members = ["crates/jsax"]

[package]
name = "jk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = { version = "0.28.1", features = ["use-dev-tty"] }
indexmap = "2.12.0"
lexopt = "0.3.1"
rapidhash = "4.1.0"
ratatui = "0.29.0"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value", "preserve_order"] }
thiserror = "2.0.17"
jsax = { path = "crates/jsax" }
memmap2 = "0.9.9"
logos = "0.15.1"
itoa = "1.0.15"
heck = "0.5.0"
singularize = "0.1.0"
syntect = "5.2.0"
bumpalo = { version = "3.19.1", features = ["collections"] }

[[bench]]
name = "formatter_comparison"
harness = false

[dev-dependencies]
criterion = "0.7.0"
indoc = "2.0.7"
pretty_assertions = "1.4.1"
serde-transcode = "1.1.1"
simd-json = "0.17.0"

[target.'cfg(windows)'.dependencies.winapi-util]
version = "0.1.6"

[target.'cfg(unix)'.dependencies.libc]
version = "0.2.148"
