[package]
name = "jsax"
version = "0.1.0"
edition = "2024"
authors = ["Vinícius Miguel <vrmiguel99@gmail.com>"]
description = "A SAX-style parser for JSON."
repository = "https://github.com/vrmiguel/jk"
homepage = "https://github.com/vrmiguel/jk"
license = "MIT"

[dependencies]
thiserror = "2.0.17"

[dev-dependencies]
serde_json = "1.0.145"
